add post layout

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,14 @@
 
 .title_{
 	font-family:微软雅黑;
-	font-size:25px;
+	font-size:35px;
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    height:50px;
+
+
 }
 cls_{
 	clear:both;
