--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,15 +10,15 @@
 }
 
 .title_{
-	font-family:微软雅黑;
-	font-size:35px;
-    width: 940px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    height:50px;
-
-
+	font-family: 微软雅黑;
+	font-size: 35px;
+	width: 940px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	height: 150px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 cls_{
 	clear:both;
