--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <div
+            class="just-comments"
+            data-allowguests="true"
+            data-apikey="e7f307a0-b687-4d0f-930f-0b6ac2c08ae3">
+    </div>
+    <script async src="https://just-comments.com/w.js"></script>
+
+
 {% seo %}
   </head>
 
@@ -33,6 +41,18 @@
         <section id="main-content">
           {{ content }}
         </section>
+
+
+        <!-- START OF RELEVANT PART -->
+        <div
+                class="just-comments"
+                data-allowguests="true"
+                data-apikey="e7f307a0-b687-4d0f-930f-0b6ac2c08ae3">
+        </div>
+        <!-- END OF RELEVANT PART -->
+
+
+
 
         <aside id="sidebar">
           {% if site.show_downloads %}
