--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="inner clearfix comments_info" >
 
       <!-- START OF RELEVANT PART -->
       <div
